CONF-23007: Add minimum height for individual issues. This should have no visible effect but makes the CSS the same as the code in the flying PDF plugin where it does have an effect.

--- a/src/main/resources/templates/extra/jira/common.css
+++ b/src/main/resources/templates/extra/jira/common.css
@@ -24,6 +24,7 @@ div.bmDiv {
     border-radius: 3px;
     display: inline-block;
     min-width: 100px;
+    min-height: 16px;
 }
 
 .jira-issue > a, .single-issue-oauth.unknown-jira-issue > a {
